--- a/map.html
+++ b/map.html
@@ -64,23 +64,30 @@
     function initMap() {
 
          map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 15,
+            zoom: 10,
             center: {lat: 5.94851, lng: 80.56528}
         });
     }
 
     // Initialize Firebase
     var config = {
-        apiKey: "AIzaSyAt76KTuvqAzeUEQsyh4K3Jp9UxVMhojng",
+       /* apiKey: "AIzaSyAt76KTuvqAzeUEQsyh4K3Jp9UxVMhojng",
         authDomain: "isafe-5e90f.firebaseapp.com",
         databaseURL: "https://isafe-5e90f.firebaseio.com",
         projectId: "isafe-5e90f",
         storageBucket: "isafe-5e90f.appspot.com",
-        messagingSenderId: "496871991366"
+        messagingSenderId: "496871991366"*/
+
+        apiKey: "AIzaSyD8uV_MHyET9NGBxppaCETysQ8-McYfUZA",
+        authDomain: "marz-fd7c1.firebaseapp.com",
+        databaseURL: "https://marz-fd7c1.firebaseio.com",
+        projectId: "marz-fd7c1",
+        storageBucket: "marz-fd7c1.appspot.com",
+        messagingSenderId: "1009265839737"
     };
     firebase.initializeApp(config);
 
-    const dbRefObject = firebase.database().ref()
+    const dbRefObject = firebase.database().ref();
     i = 0;
     dataArray = [];
     marker = [];
@@ -104,46 +111,29 @@
                 animation: google.maps.Animation.DROP,
 
             });
-            //console.log(snap.val().latitude+'  '+snap.val().longitude)
 
             i++;
         });
     //remove marker when delete marker on mobile device.
     dbRefObject.on('child_removed', snap => {
-            dataDelete = snap.val();
-            console.log(snap);
-            let k = 0;
-            while (snap.val().id !== dataArray[k].id) {
-                k++;
-            }
-            marker[k].setMap(null);
+        dataDelete = snap.val();
+        console.log(snap.val());
+        let k = 0;
+        while (snap.val().incident_id !== dataArray[k].incident_id) {
+            k++;
+        }
+        marker[k].setMap(null);
     });
 
 
     //remove marker using web interface
     setTimeout(function () {
-    /*  infowindow = [];
-      function delMarker(){
-          //marker[1].setMap(null);
-      };
-      infowindow[0] = new google.maps.InfoWindow({
-          content: '<div>'+
-          '<p>Latitude: '+dataArray[0].latitude+'</p>'+
-          '<p>Longitude: '+dataArray[0].longitude+'</p><br>'+
-          '<button >click</button></div>'
-      });
-      infowindow[1] = new google.maps.InfoWindow({
-          content: '<div>'+
-          '<p>Latitude: '+dataArray[1].latitude+'</p>'+
-          '<p>Longitude: '+dataArray[1].longitude+'</p><br>'+
-          '<button id="btn">remove</button></div>'
-      });*/
 
         for (let n=0;n<marker.length;n++){
             marker[n].addListener('click', function () {
                 infowindow[n].open(map, marker[n]);
                 document.getElementById("btn"+n).addEventListener("dblclick", function(){
-                    firebase.database().ref('real_time_data/'+dataArray[n].id).remove();
+                    firebase.database().ref(dataArray[n].incident_id).remove();
                 });
             });
         }
@@ -151,7 +141,7 @@
 
 </script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7flFVyMxBPVYoRZYppgaO7BGVaMrpm0c&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8uV_MHyET9NGBxppaCETysQ8-McYfUZA&callback=initMap">
 </script>
 
 
