--- a/home.html
+++ b/home.html
@@ -46,13 +46,13 @@
 	<div class="row">
         
 		<!-- news feeder begin -->
-		<div class="home-right col-12 col-lg-6">
+		<div class="home-right col-12 col-lg-5">
  	 		<h1>news feeder</h1>
                 <div id="accordion"></div>
 	   </div>
         <!-- news feeder end -->
 		
-	<div  id="map" class="home-left col-12 col-lg-6"></div>
+	<div  id="map" class="home-left col-12 col-lg-7"></div>
 		
 	</div>
 </div>
@@ -106,7 +106,7 @@
             '</div>'+
             '<div id="collapse'+i+'" class="collapse hide" aria-labelledby="heading'+i+'" data-parent="#accordion">'+
             '<div class="card-body">'+
-            'Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,'+
+            '<img src="img/avatar.png">'+
             '</div>'+
             '</div>'+
             '</div>';
