--- a/user.html
+++ b/user.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Untitled Document</title>
-<link href="css/bootstrap-4.0.0.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Untitled Document</title>
+	<link href="css/bootstrap-4.0.0.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body style="padding-top: 70px">
@@ -36,90 +39,218 @@
     </form>
   </div>
 </nav>
-<div class="user-left"> 
+<div class="row container-fluid">
+	<!-- left panel -->
+	<div class="col-12 col-md-3 ">
+		<img id="profile-pic" src="img/avatar.png" alt="avatar" class="rounded-circle container-fluid p-0 mt-5 mb-2" >
 
-  <div class="user-profile-pic-container" style="width: 40%; margin: auto;  min-height:60px; min-width: 60px;"><img src="img/avatar.png" alt="avatar" class="rounded-circle container d-block" > 
-  </div>
-  <a href="#" class="profile-pic-upload">+Add Image </a>
-  <p>User Name</p>
-
-</div>
-<div class="user-right">
-	<div id="sign-up-form" style=" background:#C4C4C4; padding: 5%">
-	<form>
-    <fieldset class="form-group">
-        <legend><h3>User Profile</h3></legend>
-        <div class="form-group">
-        	<label class="form-control-label">Name:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-3 form-inline col-5 d-inline-flex" type="text" placeholder="First">
-            	<input style="min-width: 300px" class="form-control mb-3 form-inline col-5 d-inline-flex" type="text" placeholder="Last">
-				<button type="button" class="btn btn-default btn-xs" >Edit</button>
-          	</div>
-			
-      	</div>
-		<div class="form-group">
-        	<label class="form-control-label">Username:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-3 form-inline col-5 d-inline-flex" type="text" placeholder="Username">
-            	<button type="button" class="btn btn-default btn-xs">Edit</button>
-      		</div>
-		</div>
-		<div class="form-group">
-        	<label class="form-control-label">Email:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-3 form-inline col-5 d-inline-flex" type="email" placeholder="E-mail">
-				<button type="button" class="btn btn-default btn-xs">Edit</button>
+		<!--progress bar -->
+		<div  style="justify-content:center; display: flex;" >
+			<div class="progress" style="width: 120px; height: 5px; display: none;">
+				<div id="progress-bar" class="progress-bar bg-success progress-bar-striped progress-bar-animated " role="progressbar" style="width: 0"></div>
 			</div>
-      	</div>
-		
-			
-		<div class="form-group">
-        	<label class="form-control-label">Password:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-3 form-inline col-5 d-inline-flex" type="password" placeholder="Password">
-				<button type="button" class="btn btn-default btn-xs">Edit</button>
-            	
-      		</div>
 		</div>
-		
-		<div class="form-group " style="margin-right: 80%">
-			<label class="form-control-label">Gender:</label>
-			<select style="min-width: 100px" class="form-control mb-1">
-				<option value="male">Male</option>
-				<option value="female">Female</option>				
-			</select>
-			<button type="button" class="btn btn-default btn-xs">Edit</button>
+
+		<!--profile pic upload btn -->
+		<div  style="justify-content:center; display: flex;"  >
+			<div style=" position:relative; overflow: hidden; width: 140px">
+				<input style="position:absolute;  opacity:0; left:0; top:0; width:100%" type="file" id="file-btn"/>
+				<a id="change-image">&#65308;Change Image&#65310</a>
+			</div>
+
 		</div>
-		<div class="form-group">
-        	<label class="form-control-label">Address:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 1">
-      		</div>
-			<div class="flex-row">
-            	<input  style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 2">
-      		</div>
-			<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 3">
-      		</div>
-			<button type="button" class="btn btn-default btn-xs">Edit</button>
-		</div>
-		<div class="form-group">
-        	<label class="form-control-label">Contact:</label>
-        	<div class="flex-row">
-            	<input style="min-width: 300px" class="form-control mb-2  col-5 " type="text" placeholder="Enter mobile number">
-            	<button type="button" class="btn btn-default btn-xs">Edit</button>
-      		</div>
-			
-		</div>
-		
-		
-      </fieldset>
-    <button class="btn btn-primary">Save</button>
-  </form>
+
+  		<p style="justify-content: center; display: flex">User Name</p>
+
+		<script>
+			var config = {
+			/* apiKey: "AIzaSyAt76KTuvqAzeUEQsyh4K3Jp9UxVMhojng",
+			authDomain: "isafe-5e90f.firebaseapp.com",
+			databaseURL: "https://isafe-5e90f.firebaseio.com",
+			projectId: "isafe-5e90f",
+			storageBucket: "isafe-5e90f.appspot.com",
+			messagingSenderId: "496871991366"*/
+
+			apiKey: "AIzaSyD8uV_MHyET9NGBxppaCETysQ8-McYfUZA",
+			authDomain: "marz-fd7c1.firebaseapp.com",
+			databaseURL: "https://marz-fd7c1.firebaseio.com",
+			projectId: "marz-fd7c1",
+			storageBucket: "marz-fd7c1.appspot.com",
+			messagingSenderId: "1009265839737"
+			};
+			firebase.initializeApp(config);
+
+
+			/**
+			 * set profile picture */
+            firebase.storage().ref('car.jpg').getDownloadURL().then(function(url) {
+                // `url` is the download URL
+				console.log(url);
+                $("#profile-pic").attr("src",url)
+            }).catch(function(error) {
+                // Handle any errors
+            });
+
+
+			/**
+			*profile pic upload */
+			$("#file-btn").change(function (e) {
+			//get file
+			 file = e.target.files[0];
+			//create a storage reference
+			var storageRef = firebase.storage().ref(file.name);
+			//upload file
+			var task = storageRef.put(file);
+			//display progess bar
+			$(".progress").css("display", "flex");
+			//update progress bar
+			var percentage;
+			task.on('state_changed',
+			function progess(snap) {
+			percentage = (snap.bytesTransferred/snap.totalBytes)*100+"%";
+			$("#progress-bar").css("width", percentage);
+			},
+			function error(err) {
+			$("#progress-bar").attr("class","progress-bar bg-danger progress-bar-striped ");
+			},
+			function complete() {
+			$(".progress").css("display", "none");
+			percentage =0;
+			$("#progress-bar").css("width", percentage);
+				//reset photo after upload complete
+                firebase.storage().ref(file.name).getDownloadURL().then(function(url) {
+                    // `url` is the download URL
+                    console.log(url);
+                    $("#profile-pic").attr("src",url)
+                }).catch(function(error) {
+                    // Handle any errors
+                });
+			}
+			)
+
+
+			})
+
+		</script>
+	</div>
+	<!-- left panel end -->
+
+	<!-- right panel begin -->
+	<div class=" col-12 col-md-9 ">
+		<div id="sign-up-form" style=" background:#C4C4C4; padding: 5%; min-width: 310px" class="mt-3 mb-3">
+			<form>
+			<fieldset class="form-group">
+			<legend><h3>User Profile Details</h3></legend>
+			<div class="form-group">
+				<label class="form-control-label">Name:</label>
+				<div class="flex-row">
+					<input id="txt-name-first" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="text" placeholder="First" disabled>
+					<input id="txt-name-last" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="text" placeholder="Last" disabled>
+					<button id="btn-edit-name" type="button" class="btn btn-default btn-xs  mb-1" >Edit</button>
+				</div>
+
+			</div>
+			<div class="form-group">
+				<label class="form-control-label">Username:</label>
+				<div class="flex-row">
+					<input id="txt-username" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="text" placeholder="Username" disabled>
+					<button id="btn-edit-username" type="button" class="btn btn-default btn-xs  mb-1">Edit</button>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="form-control-label">Email:</label>
+				<div class="flex-row">
+					<input id="txt-email" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="email" placeholder="E-mail" disabled>
+					<button id="btn-edit-email" type="button" class="btn btn-default btn-xs  mb-1">Edit</button>
+				</div>
+			</div>
+
+
+			<div class="form-group">
+				<label class="form-control-label">Password:</label>
+				<div class="flex-row">
+					<input id="txt-password" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="password" placeholder="Password" disabled>
+					<button  id="btn-edit-password" type="button" class="btn btn-default btn-xs  mb-1">Edit</button>
+
+				</div>
+			</div>
+
+			<div class="form-group " >
+				<label  class="form-control-label">Gender:</label>
+				<div class="flex-row">
+					<select id="slt-gender" style="min-width: 100px ;width: 100px" class="form-control mb-1 form-inline d-inline-flex" disabled>
+						<option value="male">Male</option>
+						<option value="female">Female</option>
+					</select>
+					<button id="btn-edit-gender" type="button" class="btn btn-default btn-xs  mb-1">Edit</button>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="form-control-label">Address:</label>
+				<div class="flex-row">
+					<input id="txt-address-line-1" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 1" disabled>
+				</div>
+				<div class="flex-row">
+					<input id="txt-address-line-2"  style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 2" disabled>
+				</div>
+				<div class="flex-row">
+					<input id="txt-address-line-3" style="min-width: 300px" class="form-control mb-1 form-inline col-5 d-inline-flex" type="Text" placeholder="Line 3" disabled>
+					<button id="btn-edit-address" type="button" class="btn btn-default btn-xs  mb-1">Edit</button>
+				</div>
+
+			</div>
+			<div class="form-group">
+				<label class="form-control-label">Contact:</label>
+				<div class="flex-row">
+					<input id="txt-contact" style="min-width: 300px" class="form-control mb-1  col-5 form-inline d-inline-flex " type="text" placeholder="Enter mobile number" disabled>
+					<button id="btn-edit-contact" type="button" class="btn btn-default btn-xs mb-1">Edit</button>
+				</div>
+
+			</div>
+
+
+		  </fieldset>
+		<button class="btn btn-primary">Save</button>
+	  	</form>
+
+		<script>
+            $("#btn-edit-name").click(function(){
+                $("#txt-name-first").prop('disabled', false);
+                $("#txt-name-last").prop('disabled', false);
+            });
+            $("#btn-edit-username").click(function(){
+                $("#txt-username").prop('disabled', false);
+
+            });
+            $("#btn-edit-email").click(function(){
+                $("#txt-email").prop('disabled', false);
+
+            });
+            $("#btn-edit-password").click(function(){
+                $("#txt-password").prop('disabled', false);
+
+            });
+            $("#btn-edit-gender").click(function(){
+                $("#slt-gender").prop('disabled', false);
+
+            });
+            $("#btn-edit-address").click(function(){
+                $("#txt-address-line-1").prop('disabled', false);
+                $("#txt-address-line-2").prop('disabled', false);
+                $("#txt-address-line-3").prop('disabled', false);
+
+            });
+            $("#btn-edit-contact").click(function(){
+                $("#txt-contact").prop('disabled', false);
+
+            });
+		</script>
 	
 </div>
+	</div>
+	<!-- right panel end -->
 </div>
+
 <script src="js/jquery-3.2.1.min.js"></script> 
 <script src="js/popper.min.js"></script> 
 <script src="js/bootstrap-4.0.0.js"></script>
